kustomize/overlays/prod/ingressroute.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: whoami-notls
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`whoami.kube.fischbacher.rocks`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: whoami-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.kube.fischbacher.rocks`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
